# gs-soccer

./: .env  .gitattributes  .gitignore  README.md  camera_location_experiment.py  core_func.py  main.py  network.py  pyproject.toml  run_dribble.py  run_dribble_1v1_IL.py  run_dribble_ppo.py  run_dribble_ppo_pi.py  run_dribble_sac.py  run_dribble_sac_pi.py  run_game_env_test.py  run_soccer_1v1_alphastar.py  run_soccer_1v1_policies.py  run_walk.py  run_walk_pi.py  test.py  test1.py  test_camera_location.py  test_pi_kick_env.py
MDPs/: MDP.py  __init__.py  dummy.py
algorithm/: algorithm.py
algorithms/: __init__.py  algorithm.py  alphastar_evolution.py  ppo.py  sac.py
assets/MOS9/: MOS9.urdf  MOS9_walk.urdf
assets/MOS9/meshes/: Lankle.STL  Larm.STL  Lfoot.STL  Lhand.STL  Lhip.STL  Llap.STL  Lleg1.STL  Lleg2.STL  Lshoulder.STL  Rankle.STL  Rarm.STL  Rfoot.STL  Rhand.STL  Rhip.STL  Rlap.STL  Rleg1.STL  Rleg2.STL  Rshoulder.STL  body.STL  body_LowMesh.STL  head.STL  neck.STL
assets/field/: field.xml
assets/g1/: g1_29dof.urdf
envs/: __init__.py  controlled_robot.py  dribble.py  env.py  field.py  game.py  game_env.py  kick.py  robot.py  single_walker.py  walk.py  walker.py
experiments/: dribble_rl.py  sim2sim.py  test_walker.py
fields/: __init__.py  ball_field.py  field.py  meshes.py  soccer_field.py  terrain_field.py  textures.py
models/: camera_location_rnn.py  dribble_model.py  game_model.py  model.py  mos9_model.py  mos9_walk_model.py  pi_walk_model.py  soccer_1v1_model.py  walk_model.py
models_ckpt/: pi_policy.pt  walk_v3_t8.pt  walk_v5_t5.pt  walk_v7_t5.pt
policies/: __init__.py  go_to_ball_pid.py  zero.py
policies/advanced_dribble/: __init__.py  policy.py
robots/: __init__.py  controlled_robot.py  floating_camera.py  mos9.py  pi.py  robot.py  teamed_robot.py
scripts/: convert_pi_checkpoint.py  export_dribble_policy_jit.py  export_pi_policy_jit.py  inspect_pt.py  test_ball_rolling.py  test_genesis.py
utils/: data_move_memory.py
