[project]
name = "gs-soccer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch<=2.9.1",
    "gymnasium[classic-control]",
    "genesis-world",
    "tensorboard>=2.20.0",
    "skrl[torch]>=1.4.3",
    "ipython>=9.10.0",
    "setuptools<80.0.0",
]

[project.optional-dependencies]
cuda = ["torch", "triton"]
metal = ["torch"]
rocm = ["torch", "triton", "triton-kernels"]

[tool.uv]
conflicts = [[{ extra = "cuda" }, { extra = "rocm" }],
             [{ extra = "metal" }, { extra = "rocm" }],
             [{ extra = "metal" }, { extra = "cuda" }]]

[tool.uv.sources]
torch = [
  { index = "rocm721", extra = "rocm"},
  { index = "cuda130", extra = "cuda" },
  { index = "darwin", extra = "metal"}
]
triton = [
  { index = "rocm721", extra = "rocm"},
  { index = "cuda130", extra = "cuda", marker = "extra == 'cuda'" }
]
triton-kernels = [
  { index = "rocm721", extra = "rocm"},
]

[[tool.uv.index]]
name = "cuda130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "darwin"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "rocm721"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.1/"
format = "flat"
explicit = true
